...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/genderRadioGroup"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/ageRadioGroup">

                <RadioButton
...
                <RadioButton
                        android:text="@string/Boy"
                        android:hint="@string/BOY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    android:layout_height="60dp"
                    android:inputType="textPersonName"
                    android:id="@+id/childNameEditText"
                    android:importantForAutofill="no"
                    app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/pickedDateTextView"/>

                <TextView
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/yearSpinner"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
...
                        android:layout_marginStart="16dp"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toStartOf="@+id/monthSpinner"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
...
                        android:layout_height="60dp"
                        android:inputType="numberDecimal"
                        android:id="@+id/heightEditText"
                        android:importantForAutofill="no"
                        app:layout_constraintTop_toTopOf="parent"
...
                        android:layout_height="60dp"
                        android:inputType="numberDecimal"
                        android:id="@+id/weightEditText"
                        android:importantForAutofill="no"
                        app:layout_constraintTop_toTopOf="parent"
...
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/calculateButton"
                    android:onClick="calculateCentile"
                    android:layout_marginTop="16dp"
...

            <TextView
                    android:text="@string/BMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BMITextView"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/calculateButton"
...

            <TextView
                    android:text="@string/centileWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/centileWeightTextView"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/BMITextView"
...

            <TextView
                    android:text="@string/centileHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/centileHeightTextView"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/centileWeightTextView"
...

            <TextView
                    android:text="@string/centileBmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/centileBmiTextView"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/centileHeightTextView"
...
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/saveResultsButton"
                    android:onClick="saveResults"
                    app:layout_constraintStart_toStartOf="parent"
...
