<resources>
    <string name="app_name">Oblicz centyl dziecka</string>
    <string name="Płeć">Gender</string>
    <string name="gender">Płeć</string>
    <string name="Girl">Dziewczynka</string>
    <string name="GIRL">GIRL</string>
    <string name="Boy">Chłopiec</string>
    <string name="BOY">BOY</string>
    <string name="go">Wylicz</string>
    <string name="weight">Masa[kg]</string>
    <string name="height">Wzrost[cm]</string>
    <string name="centileWeight">Centyl masa</string>
    <string name="centileHeight">Centyl wzrost</string>
    <string name="centileBmi">Centyl BMI</string>
    <string name="BMI">BMI</string>
    <string name="setBirthDate">Ustaw</string>
    <string name="labelBirthDate">Data urodzenia:</string>
    <string name="labelAge">Wiek (lata, miesiące)</string>
    <string name="age">Wiek</string>
    <string name="birthDate">Data urodzenia</string>
    <string name="childName">Imię</string>
    <string name="save">Zapisz</string>
    <string name="resultsSaved">Zapisano wyniki</string>
    <string name="resultsNotSaved">Błąd zapisu wyników</string>
    <string name="fillFields">Uzupełnij pola:</string>
    <string name="noDataForThisAgeLong">brak danych dla tego wieku</string>
    <string name="noDataForThisAgeShort">b/d</string>
    <string name="resultsFile">results.csv</string>
    <string-array name="year_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>
    <string-array name="monthArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="titleActivityControl">Control</string>
    <string name="recordDate">Data zapisu</string>
    <string name="resultListToolbarLabel">Wyniki</string>
    <string name="actionResult">Wyniki</string>
    <string name="actionEmail">Email</string>
    <string name="actionDelete">Usuń</string>
    <string-array name="resultsOK">
        <item>10</item>
        <item>15</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>85</item>
        <item>90</item>
        <item>brak danych dla tego wieku</item>
        <item>b/d</item>
    </string-array>
    <string name="deleteQuestion">Usunąć wszystko?</string>
    <string name="yesAnswer">Tak</string>
    <string name="noAnswer">Nie</string>
</resources>
