<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
            android:id="@+id/resultsIconGroup"
            android:visible="false">
        <item
                android:id="@+id/emailIcon"
                android:title="@string/actionEmail"
                android:orderInCategory="1"
                app:showAsAction="ifRoom"
                android:icon="@android:drawable/ic_dialog_email"
                />
        <item
                android:id="@+id/deleteIcon"
                android:title="@string/actionDelete"
                android:orderInCategory="2"
                app:showAsAction="ifRoom"
                android:icon="@android:drawable/ic_delete"
                />
    </group>
</menu>